# ASCIIDraw

./: .gitignore  CMakeLists.txt  README.md  clear.cmake  main.cpp
data/: osaka.mtl
src/: Aliases.h  BroadcastExecutor.cpp  BroadcastExecutor.h  Camera.cpp  Camera.h  ConsoleWindow.cpp  ConsoleWindow.h  DataInfo.h  Framebuffer.h  GraphicEngine.h  IntensityUtils.cpp  IntensityUtils.h  Mesh.h  Model.cpp  Model.h  ParticlesEngine.cpp  ParticlesEngine.h  Platform.h  RenderAlgorithms.cpp  RenderAlgorithms.h  RenderExperiments.cpp  RenderUtils.h  Teapotdata.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
